# usaugment-experiments

./: .gitignore  .pre-commit-config.yaml  Full-Text Ultrasound Articles Review.xlsx  LICENSE  README.md  launch_augmentation_evaluations.sh  launch_trivial_augment_evaluations.sh  pyproject.toml  requirements.txt  requirements_cc.txt  setup_node.sh  train.sh  train_trivial_augment.sh  tune.sh
.devcontainer/: Dockerfile  devcontainer.json  post_create_script.sh
scripts/: figures.py  generate_augmentation_figures.py  individual_effects_classification.py  individual_effects_segmentation.py  literature_review.py  ostvik_augmentations.ipynb  trivial_augment_classification.py  trivial_augment_segmentation.py
scripts/models/: download_huggingface_models.sh  download_models.sh  test_segformer_models.py
scripts/results/: generate_ultrabench_figures.py  literature_review.py  measure_individual_effects_classification.py  measure_individual_effects_classification_models.py  measure_individual_effects_segmentation.py  measure_individual_effects_segmentation_models.py  measure_trivial_augment_effects_classification.py  measure_trivial_augment_effects_classification_models.py  measure_trivial_augment_effects_segmentation.py  measure_trivial_augment_effects_segmentation_models.py
scripts/slurm/: launch_augmentation_evaluations.sh  launch_model_arch_augmentation_evaluations.sh  launch_model_arch_hparam_studies.sh  launch_model_arch_trivial_augment_evaluations.sh  launch_trivial_augment_evaluations.sh  setup_node.sh  train.sh  train_trivial_augment.sh  tune.sh
(+123 files in other folders)
