[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usaugment"
version = "0.0.1"
authors = [
  { name="Adam Tupper", email="adam.tupper@icloud.com" },
]
description = "Ultrasound augmentation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adamtupper/ultrasound-augmentation"
Issues = "https://github.com/adamtupper/ultrasound-augmentation/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"